sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
	  	getValeur(i)=x;
                ^AlgBubbleSort1:5: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
	  	getValeur(i+1)=y;
                ^AlgBubbleSort1:6: error: not found: value x
	  	while (x>y) {
                       ^AlgBubbleSort1:7: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
	  		setValeur(i)==y
                                 ^